--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 
-SEOTitle: 马铃薯的博客 | BY Blog
+SEOTitle: 马铃薯的博客 | 
 header-img: img/post-bg-desk.jpg
 email: 1412453794@qq.com
 description: "终极的目标是被人遗忘."
