--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 1001
 SEOTitle: 马铃薯的博客 | 用户1001
 header-img: img/post-bg-desk.jpg
 email: 1412453794@qq.com
-description: "终极的目标是被人遗忘."
+description: "welcome."
 keyword: "BY, BY Blog, 马铃薯的博客, chen-24, 马铃薯, iOS, Apple, iPhone"
 url: "http://chen-24.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
